# cetcd

./: .gitignore  CMakeLists.txt  notes.html
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_micro.c
cmake/: cetcd_helpers.cmake
cmd/cetcd/: CMakeLists.txt  main.c
cmd/cetcd-migrate/: CMakeLists.txt  main.c
cmd/cetcdctl/: CMakeLists.txt  main.c
docs/: architecture.md  usage.md
docs/adr/: 0001-raft-rolled-in-house.md  0002-lmdb-backend.md  0003-coroutines-on-libuv.md  0004-watch-streaming-coroutines.md
docs/wiki/: Home.md
include/cetcd/: arena.h  auth.h  backend.h  base.h  bench.h  buf.h  clock.h  hash.h  hashmap.h  http2.h  io.h  lease.h  log.h  metrics.h  mvcc.h  peer.h  proto.h  raft.h  server.h  slab.h  slice.h  snap.h  tls.h  treap.h  v3rpc.h  wal.h
src/: CMakeLists.txt
src/auth/: CMakeLists.txt  auth.c
src/backend/: CMakeLists.txt  backend.c
src/base/: CMakeLists.txt  arena.c  buf.c  clock.c  error.c  hash.c  hashmap.c  log.c  metrics.c  slab.c  slice.c  treap.c
src/http2/: CMakeLists.txt  http2.c
src/io/: CMakeLists.txt  async.c  co.c  io_internal.h  loop.c  tcp.c  timer.c
src/lease/: CMakeLists.txt  lease.c
src/mvcc/: CMakeLists.txt  mvcc.c
src/peer/: CMakeLists.txt  peer.c
src/proto/: CMakeLists.txt  codec.c
src/raft/: CMakeLists.txt  log.c  raft.c  storage.c
src/server/: CMakeLists.txt  server.c
src/snap/: CMakeLists.txt  snap.c
src/tls/: CMakeLists.txt  tls.c
src/v3rpc/: CMakeLists.txt  auth_handler.c  cluster_handler.c  kv_handler.c  lease_handler.c  maint_handler.c  v3rpc.c  watch_handler.c
src/wal/: CMakeLists.txt  decoder.c  encoder.c
tests/: CMakeLists.txt
tests/harness/: CMakeLists.txt  cetcd_test.c  cetcd_test.h
tests/integration/: CMakeLists.txt  test_live_server.c
tests/unit/: CMakeLists.txt
tests/unit/auth/: CMakeLists.txt  test_auth.c
tests/unit/backend/: CMakeLists.txt  test_backend.c
tests/unit/base/: CMakeLists.txt  test_arena.c  test_buf.c  test_clock.c  test_error.c  test_hash.c  test_hashmap.c  test_log.c  test_metrics.c  test_slab.c  test_slice.c  test_treap.c
tests/unit/http2/: CMakeLists.txt  test_http2.c
tests/unit/io/: CMakeLists.txt  test_co.c  test_loop.c  test_tcp.c  test_timer.c
tests/unit/lease/: CMakeLists.txt  test_lease.c
tests/unit/mvcc/: CMakeLists.txt  test_mvcc.c
tests/unit/peer/: CMakeLists.txt  test_peer.c
tests/unit/proto/: CMakeLists.txt  test_codec.c  test_kv.c  test_rpc.c
tests/unit/raft/: CMakeLists.txt  test_raft_election.c  test_raft_network.c  test_raft_wire.c
tests/unit/server/: CMakeLists.txt  test_server.c
tests/unit/snap/: CMakeLists.txt  test_snap.c
tests/unit/tls/: CMakeLists.txt  test_tls.c
tests/unit/v3rpc/: CMakeLists.txt  test_v3rpc.c
tests/unit/wal/: CMakeLists.txt  test_wal.c
